Add SQE+qp citation

--- a/resources/methods.bib
+++ b/resources/methods.bib
@@ -751,3 +751,13 @@
 	year={2013},
 	publisher={ACS Publications}
 }
+
+@article{Schindler2021,
+	title={Optimized SQE atomic charges for peptides accessible via a web application},
+	author={Schindler, Ondřej and Raček, Tomáš and Maršavelski, Aleksandra and Koča, Jaroslav and Berka, Karel and Svobodová, Radka},
+	journal={Journal of Cheminformatics},
+	volume={13},
+	number={1},
+	year={2021},
+	publisher={Springer}
+}
