--- a/resources/methods/methods.tex
+++ b/resources/methods/methods.tex
@@ -450,7 +450,7 @@ where $q_0$ is a vector of initial formal charges, $\eta$ is a vector of atomic 
 \end{gather}
 
 \section*{SQE+qp}
-SQE+qp replaces the formal charges $q_0$ with the parameterized ones $q_p$. To preserve the total charge of the molecule, these parameterized values must be normalized first:
+SQE+qp \cite{Schindler2021} replaces the formal charges $q_0$ with the parameterized ones $q_p$. To preserve the total charge of the molecule, these parameterized values must be normalized first:
 
 \begin{align}
     \label{eq:sqe_qp_norm}
